--- a/WebApplication2/Site.Master
+++ b/WebApplication2/Site.Master
@@ -38,10 +38,8 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Upload">Upload Blok</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
-                        <!-- Menambahkan tautan ke Mail Setting -->
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Module/MailSetting/Index.aspx">Mail Setting</a></li>
                     </ul>
                 </div>
             </div>
