inquiry and adjust upload

--- a/WebApplication2/Site.Master
+++ b/WebApplication2/Site.Master
@@ -40,6 +40,7 @@
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Upload">Upload Blok</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/UploadInquiry">Upload Inquiry</a></li>
                     </ul>
                 </div>
             </div>
